Introduce admin mode for KBeans and enhance project metadata
- Add support for admin KBeans (`app`, `setup`) to operate independently of project structure.
- Introduce `adminMode` setting in `BehaviorSettings` and related logic.
- Avoid compilation, dependency resolution, and child module traversal in admin mode.
- Document admin KBeans usage and restrictions.